# Marjak-MacOS-Filesystem-Intelligence

./: .gitignore  README.md  VFS_PLAYBOOK.txt  agent.py  config_manager.py  guidebook.py  knowledge_book.py  main.py  prompts.py  pyproject.toml  test_agent.py  test_all_tools.py  tools.py
Formula/: marjak.rb
runlogs/20260429-105445-gemma4-Pro-Marjak-V2/: 20260429-105524-marjak.txt  20260429-105624-marjak.txt  20260429-105716-marjak.txt  20260429-105842-marjak.txt  20260429-105926-marjak.txt  20260429-110025-marjak.txt  20260429-110130-marjak.txt  20260429-110356-marjak.txt  20260429-110554-marjak.txt  20260429-110708-marjak.txt  20260429-110756-marjak.txt  20260429-110857-marjak.txt  20260429-111026-marjak.txt  20260429-111112-marjak.txt  20260429-111239-marjak.txt  20260429-111341-marjak.txt  20260429-111454-marjak.txt  20260429-111647-marjak.txt  20260429-111747-marjak.txt  20260429-111834-marjak.txt  20260429-111944-marjak.txt  20260429-112122-marjak.txt  20260429-112309-marjak.txt  20260429-112511-marjak.txt  20260429-112603-marjak.txt  20260429-112700-marjak.txt  20260429-112745-marjak.txt  20260429-112838-marjak.txt  20260429-113014-marjak.txt  20260429-113047-marjak.txt  20260429-113230-marjak.txt  20260429-113305-marjak.txt  20260429-113331-marjak.txt  20260429-113436-marjak.txt  20260429-113516-marjak.txt  20260429-113655-marjak.txt  20260429-113720-marjak.txt  20260429-113835-marjak.txt  20260429-113924-marjak.txt  20260429-114009-marjak.txt  (+25 more)
runlogs/20260429-121743-gemma4-Pro-Marjak-V1/: 20260429-121835-marjak.txt  20260429-121940-marjak.txt  20260429-122028-marjak.txt  20260429-122228-marjak.txt  20260429-122258-marjak.txt  20260429-122421-marjak.txt  20260429-122522-marjak.txt  20260429-122626-marjak.txt  20260429-122825-marjak.txt  20260429-123018-marjak.txt  20260429-123103-marjak.txt  20260429-123302-marjak.txt  20260429-123349-marjak.txt  20260429-123424-marjak.txt  20260429-123502-marjak.txt  20260429-123600-marjak.txt  20260429-123712-marjak.txt  (+44 more)
scripts/: benchmark.py  benchmark_v2.py
tests/: test_agent.py  test_guidebook.py  test_tools.py  test_v2.py
(+29 files in other folders)
