[project]
name = "marjaka"
version = "1.0.0"
description = "Mārjak — macOS filesystem intelligence agent with Navigator + Executor architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "rich>=13.7.0",
]

[project.scripts]
marjaka = "main:main"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff]
# Set line length to 88 characters (standard Python convention)
line-length = 88
# Target Python 3.10+ rules
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (F) and pycodestyle (E) checks
select = ["E", "F"]
